--- a/.gitignore
+++ b/.gitignore
@@ -190,3 +190,7 @@ pyrightconfig.json
 .ionide
 
 *.pdf
+
+# Non è possibile pushare i file pickle, vanno compressi per risparmiare spazio
+/models/base/*.pkl
+/models/bert_boosted/*.pkl
