--- a/.gitignore
+++ b/.gitignore
@@ -194,3 +194,4 @@ pyrightconfig.json
 # Non è possibile pushare i file pickle, vanno compressi per risparmiare spazio
 /models/base/*.pkl
 /models/bert_boosted/*.pkl
+/datasets/*.csv
